# csbluegem.py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish_release.yml
csbluegem/: __init__.py  client.py  errors.py  http.py  meta.py  types.py  utils.py
docs/: conf.py  csbluegem.rst  index.rst
examples/: basic.py  discord_bot_integration.py  pattern_data.py  pricecheck.py
